--- a/app/globals.css
+++ b/app/globals.css
@@ -25,4 +25,26 @@ body {
 	background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb)))
 		rgb(var(--background-start-rgb));
 	color: #6d6d6d;
+	overflow-x: hidden;
+}
+
+/* Hide default scrollbar */
+::-webkit-scrollbar {
+	width: 10px; /* Width of the scrollbar */
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+	background: #f1f1f1; /* Color of the scrollbar track */
+}
+
+/* Thumb */
+::-webkit-scrollbar-thumb {
+	background: #888; /* Color of the scrollbar thumb */
+	border-radius: 5px; /* Rounded corners of the scrollbar thumb */
+}
+
+/* On hover, style the thumb differently */
+::-webkit-scrollbar-thumb:hover {
+	background: #555; /* Color of the scrollbar thumb on hover */
 }
