--- a/styles/globals.css
+++ b/styles/globals.css
@@ -54,3 +54,17 @@ body {
   font-weight: bold; /* Optionally, apply any other styling you want for the time text */
   font-size: 1.2rem;
 }
+
+.arrow-button {
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  padding: 0.1rem 0.5rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+}
+
+.arrow-icon {
+  margin-right: 0.3rem;
+}
