--- a/styles/globals.css
+++ b/styles/globals.css
@@ -26,6 +26,21 @@ body {
     rgb(var(--background-start-rgb));
   color: #6d6d6d;
   overflow-x: hidden;
+  font-family:
+    ui-sans-serif,
+    system-ui,
+    -apple-system,
+    BlinkMacSystemFont,
+    'Segoe UI',
+    Roboto,
+    'Helvetica Neue',
+    Arial,
+    'Noto Sans',
+    sans-serif,
+    'Apple Color Emoji',
+    'Segoe UI Emoji',
+    'Segoe UI Symbol',
+    'Noto Color Emoji';
 }
 
 .Button {
